--- a/BusinessProcess/Code/Vanrise.Reprocess.Web/Reprocess/Directives/ScheduleTask/Templates/ReprocessProcessTaskTemplate.html
+++ b/BusinessProcess/Code/Vanrise.Reprocess.Web/Reprocess/Directives/ScheduleTask/Templates/ReprocessProcessTaskTemplate.html
@@ -1,24 +1,24 @@
 ﻿<vr-row>
     <vr-columns colnum="4">
-        <reprocess-reprocessdefinition-selector isrequired="true" on-ready="onReprocessDefinitionSelectorReady"></reprocess-reprocessdefinition-selector>
+        <reprocess-reprocessdefinition-selector isrequired="true" on-ready="scopeModel.onReprocessDefinitionSelectorReady" selectedvalues="scopeModel.selectedReprocessDefinition"></reprocess-reprocessdefinition-selector>
     </vr-columns>
 
     <vr-columns colnum="8" haschildcolumns>
-        <vr-validator validate="isValid()">
+        <vr-validator validate="scopeModel.isValid()">
             <vr-columns colnum="6">
-                <vr-textbox value="daysBack" type="number" label="Days Back" isrequired="true" minvalue="1"></vr-textbox>
+                <vr-textbox value="scopeModel.daysBack" type="number" label="Days Back" isrequired="true" minvalue="1"></vr-textbox>
             </vr-columns>
 
             <vr-columns colnum="6">
-                <vr-textbox value="numberOfDays" type="number" label="Number Of Days" isrequired="true" minvalue="1"></vr-textbox>
+                <vr-textbox value="scopeModel.numberOfDays" type="number" label="Number Of Days" isrequired="true" minvalue="1"></vr-textbox>
             </vr-columns>
         </vr-validator>
     </vr-columns>
 </vr-row>
 <vr-row>
-    <reprocess-chunktime-selector on-ready="onChunkTimeSelectorReady" normal-col-num="4" isrequired="true"></reprocess-chunktime-selector>
+    <reprocess-chunktime-selector on-ready="scopeModel.onChunkTimeSelectorReady" normal-col-num="4" isrequired="true"></reprocess-chunktime-selector>
 
-    <vr-columns colnum="4">
-        <vr-switch value="useTempStorage" label="Use Temporary Storage"></vr-switch>
+    <vr-columns colnum="4" ng-if="scopeModel.selectedReprocessDefinition!=undefined && !scopeModel.selectedReprocessDefinition.ForceUseTempStorage">
+        <vr-switch value="scopeModel.useTempStorage" label="Use Temporary Storage"></vr-switch>
     </vr-columns>
 </vr-row>
