--- a/BusinessProcess/Code/Vanrise.Reprocess.Web/Reprocess/Views/ReprocessDefinition/ReprocessDefinitionEditor.html
+++ b/BusinessProcess/Code/Vanrise.Reprocess.Web/Reprocess/Views/ReprocessDefinition/ReprocessDefinitionEditor.html
@@ -33,6 +33,11 @@
                         <vr-textbox value="scopeModel.recordCountPerTransaction" label="Record Count Per Transaction" type="number" decimalprecision="0" minvalue="1" isrequired></vr-textbox>
                     </vr-columns>
                 </vr-row>
+                <vr-row>
+                    <vr-columns width="1/2row">
+                        <vr-switch value="scopeModel.forceUseTempStorage" label="Force Use Temporary Storage"></vr-switch>
+                    </vr-columns>
+                </vr-row>
             </vr-section>
             <vr-section header="CDR Import">
                 <vr-row>
