adding edit and add features to account management page
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44092

--- a/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Directives/Template/AccountManagerGrid.html
+++ b/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Directives/Template/AccountManagerGrid.html
@@ -4,5 +4,5 @@
              pagingtype="'PagingOnScroll'"
              menuactions="gridMenuActions"
              enableautoexport="true">
-    <vr-datagridcolumn headertext="'User ID'" field="'UserID'" type="'Text'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'User Name'" field="'UserName'" type="'Text'"></vr-datagridcolumn>
 </vr-datagrid>
