--- a/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Views/AccountManagerManagement.html
+++ b/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Views/AccountManagerManagement.html
@@ -2,10 +2,12 @@
     <vr-form name="formFilter">
         <div ng-hide="filterSectionCollapsed">
             <vr-row removeline>
+                <vr-accountmanager-accountmanagerdefinition-selector ng-hide="scopeModel.hideAccountDefinition" on-ready="scopeModel.onAccountManagerDefinitionSelectorReady" normal-col-num="2" selectedvalues="scopeModel.accountDefinition"
+                                                                     onselectionchanged="scopeModel.onAccountManagerDefinitionSelectorSelectionChange"></vr-accountmanager-accountmanagerdefinition-selector>
                 <vr-columns colnum="2">
                     <vr-sec-user-selector on-ready="scopeModel.onUserSelectorReady" normal-col-num="2" ismultipleselection="true"></vr-sec-user-selector>
-                    </vr-columns>
-</vr-row>
+                </vr-columns>
+            </vr-row>
         </div>
         <vr-row removeline>
             <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
