--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Views/Definition/InvoiceTypeEditor.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Views/Definition/InvoiceTypeEditor.html
@@ -7,14 +7,27 @@
                         <vr-columns width="1/3row">
                             <vr-textbox label="Name" value="scopeModel.name" isrequired="true"></vr-textbox>
                         </vr-columns>
+                    </vr-row>
+                    <vr-row>
                         <vr-columns width="1/3row">
-                            <vr-genericdata-datarecordtype-selector isrequired="true" on-ready="scopeModel.onDataRecordTypeSelectorReady" label="Invoice Record Type" onselectionchanged="scopeModel.onDataRecordTypeSelectionChanged"></vr-genericdata-datarecordtype-selector>
+                            <vr-genericdata-datarecordtype-selector hideremoveicon="true" isrequired="true" on-ready="scopeModel.onDataRecordTypeSelectorReady" label="Invoice Record Type" onselectionchanged="scopeModel.onDataRecordTypeSelectionChanged"></vr-genericdata-datarecordtype-selector>
                         </vr-columns>
                         <vr-columns width="1/3row" vr-loader="scopeModel.isLoadAmountField">
                             <vr-genericdata-datarecordtypefields-selector label="Amount Field Name" on-ready="scopeModel.onAmountFieldSelectorReady" isrequired="true"></vr-genericdata-datarecordtypefields-selector>
                         </vr-columns>
                         <vr-columns width="1/3row" vr-loader="scopeModel.isLoadCurrencyField">
                             <vr-genericdata-datarecordtypefields-selector label="Currency Field Name" on-ready="scopeModel.onCurrencyFieldSelectorReady" isrequired="true"></vr-genericdata-datarecordtypefields-selector>
+                        </vr-columns>
+                    </vr-row>
+                    <vr-row>
+                        <vr-columns width="1/3row">
+                            <vr-queueing-executionflowdefinition-selector on-ready="scopeModel.onExecutionFlowDefinitionSelectorReady" isrequired="true" hideremoveicon="true" onselectionchanged="scopeModel.onExecutionFlowDefinitionSelectionChanged"></vr-queueing-executionflowdefinition-selector>
+                        </vr-columns>
+                        <vr-columns width="1/3row" vr-loader="scopeModel.isLoadingSatgesToHold">
+                            <vr-queueing-executionflow-stage-selector customlabel="Stages To Hold" on-ready="scopeModel.onStagesToHoldSelectorReady" isrequired="true" ismultipleselection></vr-queueing-executionflow-stage-selector>
+                        </vr-columns>
+                        <vr-columns width="1/3row" vr-loader="scopeModel.isLoadingSatgesToProcess">
+                            <vr-queueing-executionflow-stage-selector customlabel="Stages To Process" on-ready="scopeModel.onStagesToProcessSelectorReady" isrequired="true" ismultipleselection></vr-queueing-executionflow-stage-selector>
                         </vr-columns>
                     </vr-row>
                     <vr-invoice-startdatecalculationmethod on-ready="scopeModel.onStartCalculationMethodDirectiveReady" normal-col-num="4"></vr-invoice-startdatecalculationmethod>
@@ -35,13 +48,14 @@
                 </vr-tab>
                 <vr-tab header="'Inv To Acc Balance Relation'">
                     <vr-row>
-                       <vr-invtoaccbalancerelation-definition-selector on-ready="scopeModel.relationDefinitionSelectorReady" normal-col-num="3"></vr-invtoaccbalancerelation-definition-selector>
+                        <vr-invtoaccbalancerelation-definition-selector on-ready="scopeModel.relationDefinitionSelectorReady" normal-col-num="3"></vr-invtoaccbalancerelation-definition-selector>
                     </vr-row>
                 </vr-tab>
                 <vr-tab header="'Invoice Attachments'">
                     <vr-row>
                         <vr-columns width="fullrow">
-                            <vr-invoicetype-invoiceattachments on-ready="scopeModel.onInvoiceAttachmentsReady"></vr-invoicetype-invoiceattachments></vr-columns>
+                            <vr-invoicetype-invoiceattachments on-ready="scopeModel.onInvoiceAttachmentsReady"></vr-invoicetype-invoiceattachments>
+                        </vr-columns>
                     </vr-row>
                 </vr-tab>
                 <vr-tab header="'Serial Number Settings'">
@@ -59,7 +73,7 @@
                         <vr-columns width="1/2row">
                             <vr-section title="Invoice File">
                                 <vr-invoicetype-filesattachments on-ready="scopeModel.onFilesAttachmentsReady"></vr-invoicetype-filesattachments>
-                             </vr-section>
+                            </vr-section>
                         </vr-columns>
                         <vr-columns width="1/2row">
                             <vr-section title="File Name Parts">
