--- a/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Views/AccountManagerEditor.html
+++ b/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Views/AccountManagerEditor.html
@@ -1,12 +1,16 @@
 ﻿<div vr-modalcontent ng-controller="VR_AccountManager_AccountManagerEditorController" vr-loader="scopeModel.isLoading" width="'50%'">
     <vr-modalbody>
         <vr-form name="formFilter">
-            <vr-row>
-                <vr-columns colnum="2">
-                    <vr-sec-user-selector on-ready="scopeModel.onUserSelectorReady" normal-col-num="2" ></vr-sec-user-selector>
-                </vr-columns>
-            </vr-row>
-        </vr-form>
+            <vr-tabs>
+            <vr-tab header="'Definitions'">
+                <vr-row>
+                    <vr-columns colnum="4">
+                        <vr-sec-user-selector on-ready="scopeModel.onUserSelectorReady" normal-col-num="2"></vr-sec-user-selector>
+                    </vr-columns>
+                </vr-row>
+            </vr-tab>
+                </vr-tabs>
+</vr-form>
     </vr-modalbody>
     <div>
         <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
