--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/GeneralTechnicalSettings/Templates/GeneralTemplateTechnicalSettings.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/GeneralTechnicalSettings/Templates/GeneralTemplateTechnicalSettings.html
@@ -1,4 +1,5 @@
 ﻿<vr-tabs>
     <vr-common-ga-settings-editor on-ready="scopeModel.onGaSettingsReady"></vr-common-ga-settings-editor>
     <vr-common-companycontact-settings-editor on-ready="scopeModel.onCompanyContactSettingsReady"></vr-common-companycontact-settings-editor>
+    <vr-common-companydefinition-settings-editor on-ready="scopeModel.onCompanyDefinitionSettingsReady"></vr-common-companydefinition-settings-editor>
 </vr-tabs>
